# merilang

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Guide.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  REFERENCE_CARD.md  mypy.ini  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: lint.yml  publish.yml  tests.yml
benchmarks/: performance.py
desilang/: __init__.py  ast_nodes.py  cli.py  parser.py
docs/: API.md  OOP_AND_ERROR_HANDLING.md  TUTORIAL.md  index.html  script.js  styles.css  syntax.html
examples/: 01_hello_world.meri  02_variables.dl  03_arithmetic.meri  03_conditionals.meri  04_conditionals.meri  04_loops.meri  05_functions.meri  05_while_loop.meri  06_fizzbuzz.meri  06_for_loop.meri  07_fibonacci.meri  07_functions.meri  08_lists.dl  08_recursion.meri  09_lists.meri  09_primes.meri  10_dictionaries.meri  10_strings.dl  10_strings.meri  11_basic_class.meri  11_lambdas.meri  12_classes.meri  12_inheritance.dl  13_bank_account.meri  13_inheritance.meri  14_error_handling.meri  15_complete_oop_errors.meri  15_fizzbuzz.meri  16_prime_numbers.meri  17_calculator.meri  18_sorting.meri  19_factorial_table.meri  20_temperature_converter.meri  21_bank_account.meri  22_student_grades.meri  23_number_guessing.meri  24_pattern_printing.meri  25_statistics.meri  README.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Playground.tsx  Prism.tsx  ScrollStack.tsx
frontend/src/pages/: Blog.tsx  Docs.tsx
merilang/: __init__.py  __main__.py  ast_nodes_enhanced.py  builtins.py  cli.py  environment.py  errors.py  errors_enhanced.py  interpreter.py  interpreter_enhanced.py  ir_generator.py  ir_nodes.py  lexer.py  lexer_enhanced.py  parser_enhanced.py  py.typed  semantic_analyzer.py  symbol_table.py
playground/: app.py
playground/static/: style.css
playground/templates/: index.html
tests/: __init__.py  smoke_test_pipeline.py  test_environment.py  test_error_handling.py  test_integration.py  test_interpreter.py  test_lexer.py  test_lexer_enhanced.py  test_oop.py  test_parser.py
